fixed api_spec.yaml
