# docs/API_spec.yaml
@@ -2583,16 +2583,9 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  total_count:
-                    type: integer
-                    example: 55  
-                    description: 플레이리스트 총 갯수
-                  diaries:                
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/DiaryInfo'
+                type: array
+                items:
+                  $ref: '#/components/schemas/DiaryInfo'
         '401':
           description: Access token이 유효하지 않거나 만료됨
           content:
