# src/controllers/diariesController.ts
@@ -857,21 +857,13 @@ export const getMypost = async (req: Request, res: Response) => {
       [userId, userId]
     );
 
-    const countQuery = `SELECT FOUND_ROWS() as total`;
-    const [[{ total }]] = await dbConnection.execute<RowDataPacket[]>(
-      countQuery
-    );
-
     const diaryInfos = await Promise.all(
       diaryRows.map((row) => {
         return convertDiaryInfo(row);
       })
     );
 
-    res.status(200).json({
-      total_count: total,
-      diaries: diaryInfos
-    });
+    res.status(200).json(diaryInfos);
   } catch (error) {
     console.error(error);
     res
